# oxydra

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  LICENSE  PLAN-MEMORY-UPDATES.md  PLAN-MEMORY.md  PLAN-MULTI-AGENT-CHANNEL.md  PLAN-SCHEDULER.md  PLAN-TUI-ISSUES.md  PLAN_PHASE12_COMPLETION.md  PLAN_phase10_implementation.md  PLAN_phase11_implementation.md  PLAN_phase12_implementation.md  PLAN_phase2_implementation.md  PLAN_phase3_implementation.md  PLAN_phase4_implementation.md  PLAN_phase5_implementation.md  PLAN_phase6_implementation.md  PLAN_phase7_implementation.md  PLAN_phase8_implementation.md  PLAN_phase9_implementation.md  README.md  deny.toml  oxydra-project-brief.md  plan-attachment-save.md  plan-catalog.md  plan-scheduler-notifications.md  rustfmt.toml  test.sh  tools-issues.md
.cargo/: config.toml
.github/prompts/: changelog.prompt.yml
.github/workflows/: build-linux.yml  build-macos.yml  quality-checks.yml  release.yml
config/skills/BrowserAutomation/: SKILL.md
config/skills/BrowserAutomation/references/: pinchtab-api.md
crates/channels/: Cargo.toml
crates/channels/src/: audit.rs  lib.rs  sender_auth.rs  session_map.rs  telegram.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs  session.rs  tests.rs  turn_runner.rs
crates/memory/: Cargo.toml
crates/memory/migrations/: 0001_create_sessions_table.sql  0002_create_conversation_events_table.sql  0003_create_conversation_events_restore_index.sql  0004_create_session_state_table.sql  0005_create_sessions_updated_at_index.sql  0006_create_files_table.sql  0007_create_chunks_table.sql  0008_create_chunks_vec_table.sql  0009_create_chunks_fts_table.sql  0010_create_files_session_source_index.sql  0011_create_chunks_session_recency_index.sql  0012_create_chunks_file_lookup_index.sql  0013_create_chunks_session_hash_index.sql  0014_create_chunks_fts_insert_trigger.sql  0015_create_chunks_fts_update_trigger.sql  0016_create_chunks_fts_delete_trigger.sql  0017_create_schedules_table.sql  0018_create_schedules_indexes.sql  0019_create_schedule_runs_table.sql  0020_create_gateway_sessions.sql  0021_create_channel_session_mappings.sql  0022_add_channel_origin_to_schedules.sql  0023_add_full_output_to_schedule_runs.sql  0024_create_chunks_vec_vector_index.sql
crates/memory/src/: cadence.rs  connection.rs  errors.rs  indexing.rs  lib.rs  scheduler_store.rs  schema.rs  session_store.rs  tests.rs
crates/provider/: Cargo.toml
crates/provider/examples/: openai_stream_stdout.rs
crates/provider/src/: anthropic.rs  gemini.rs  lib.rs  openai.rs  responses.rs  retry.rs  tests.rs
crates/runner/: Cargo.toml
crates/runner/src/: backend.rs  bootstrap.rs  catalog.rs  config_migration.rs  lib.rs  main.rs  skills.rs  tests.rs  update_check.rs
crates/runner/src/web/: catalog_api.rs  config_read.rs  control.rs  logs.rs  masking.rs  mod.rs  onboarding.rs  response.rs  schema.rs  state.rs  static_files.rs  status.rs
crates/runner/static/: index.html
crates/runner/static/css/: style.css
crates/runner/static/js/: app.js  collection-editor.js  control.js  form-renderer.js  logs.js  section-renderer.js
crates/runner/tests/: startup_integration.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: budget.rs  delegation.rs  lib.rs  memory.rs  provider_response.rs  scheduler_executor.rs  scrubbing.rs  tests.rs  tool_execution.rs
crates/runtime/tests/: openai_compatible_e2e.rs
crates/sandbox/: Cargo.toml  build.rs
crates/sandbox/src/: lib.rs  policy.rs  wasm_runner.rs  wasm_wasi_runner.rs  web_fetch.rs  web_search.rs
crates/shell-daemon/: Cargo.toml
crates/shell-daemon/src/: lib.rs
crates/shell-daemon/tests/: rpc_integration.rs
crates/tools/: Cargo.toml  build.rs
crates/tools-macros/: Cargo.toml
crates/tools-macros/src/: lib.rs
crates/tools-macros/tests/: compile.rs  generated_schema.rs
crates/tools-macros/tests/fixtures/: fail_non_async.rs  fail_non_async.stderr  fail_unsupported_argument_type.rs  fail_unsupported_argument_type.stderr  pass_async_tool.rs
crates/tools/src/: attachment_tools.rs  delegation_tools.rs  lib.rs  media_tools.rs  memory_tools.rs  path_spec.rs  registry.rs  scheduler_tools.rs  scratchpad_tools.rs  tests.rs
crates/tools/src/sandbox/: policy.rs  wasm_runner.rs  wasm_wasi_runner.rs  web_fetch.rs  web_search.rs
crates/tui/: Cargo.toml  build.rs
crates/tui/src/: app.rs  bootstrap.rs  channel_adapter.rs  event_loop.rs  lib.rs  ui_model.rs  widgets.rs
crates/tui/tests/: app_integration.rs
crates/types/: Cargo.toml
crates/types/data/: oxydra_caps_overrides.json  pinned_model_catalog.json
crates/types/src/: channel.rs  config.rs  delegation.rs  error.rs  lib.rs  memory.rs  model.rs  proactive.rs  provider.rs  runner.rs  scheduler.rs  session.rs  skill.rs  tool.rs  tracing.rs
crates/types/tests/: channel_contracts.rs  config_contracts.rs  core_types_contracts.rs  runner_contracts.rs  tool_contracts.rs
crates/wasm-guest/: Cargo.toml
crates/wasm-guest/src/: main.rs
docker/: Dockerfile  Dockerfile.prebuilt  chromium-wrapper.sh  restart-browser.sh  shell-vm-entrypoint.sh
docs/guidebook/: 01-architecture-overview.md  02-configuration-system.md  03-provider-layer.md  04-tool-system.md  05-agent-runtime.md  06-memory-and-retrieval.md  07-security-model.md  08-runner-and-guests.md  09-gateway-and-channels.md  10-testing-and-quality.md  11-multi-agent-orchestration.md  12-external-channels-and-identity.md  13-observability.md  14-productization.md  15-progressive-build-plan.md  README.md  gap-2-resolution-plan.md  gap-4-resolution-plan.md  phase-10-gap-fix-plan.md  plan-phase13.md
docs/plans/: BEST-BROWSER-TOOL-PLAN.md  browser-use-skill.md  plan-web-configurator-ux.md  plan-web-configurator.md
examples/config/: agent.toml  runner-user.toml  runner.toml
scripts/: TEST.md  build-guest-images-in-docker.sh  build-guest-images.sh  build-release-assets.sh  bump-version.sh  install-release.sh  test-build-install.sh
