[package]
name = "channels"
version = "0.1.0"
edition = "2024"

[dependencies]
types = { path = "../types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
