[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
runtime = { path = "../runtime" }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
types = { path = "../types" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
url = "2"
