[package]
name = "gateway"
version = "0.1.3"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
runtime = { path = "../runtime" }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tools = { path = "../tools" }
tracing = "0.1"
types = { path = "../types" }
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
libsql = "0.9"
memory = { path = "../memory" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
url = "2"
