[package]
name = "memory"
version = "0.1.0"
edition = "2024"

[features]
default = []
fastembed = ["dep:fastembed"]

[dependencies]
async-trait = "0.1"
blake3 = "1"
fastembed = { version = "5", optional = true }
futures = "0.3.32"
libsql = "0.9"
serde_json = "1"
types = { path = "../types" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
