[package]
name = "memory"
version = "0.1.0"
edition = "2024"

[features]
default = []
fastembed = ["dep:fastembed"]

[dependencies]
async-trait = "0.1"
blake3 = "1"
chrono = "0.4"
chrono-tz = "0.10"
cron = "0.15"
fastembed = { version = "5", optional = true }
futures = "0.3.32"
libsql = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
types = { path = "../types" }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
