[package]
name = "provider"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time"] }
tracing = "0.1"
types = { path = "../types" }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
tokio = { version = "1", features = ["full"] }
