[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = "0.20"
futures-util = "0.3"
hyper = { version = "1.8", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
hyperlocal = "0.9"
http-body-util = "0.1"
sandbox = { path = "../sandbox" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["net", "rt", "time"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect"] }
toml = "1.0"
tracing = "0.1"
types = { path = "../types" }
