[package]
name = "runner"
version = "0.1.0"
edition = "2024"
default-run = "runner"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
bollard = "0.20"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
gateway = { path = "../gateway" }
hyper = { version = "1.8", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
hyperlocal = "0.9"
http-body-util = "0.1"
runtime = { path = "../runtime" }
sandbox = { path = "../sandbox" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect"] }
toml = "1.0"
tracing = "0.1"
tui = { path = "../tui" }
types = { path = "../types" }
