[package]
name = "runner"
version = "0.1.0"
edition = "2024"
default-run = "runner"

[features]
default = ["telegram"]
telegram = ["dep:channels", "channels/telegram"]

[dependencies]
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
bollard = "0.20"
channels = { path = "../channels", optional = true }
clap = { version = "4.5", features = ["derive", "env"] }
figment = { version = "0.10", features = ["env", "toml"] }
futures-util = "0.3"
gateway = { path = "../gateway" }
hyper = { version = "1.8", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
hyperlocal = "0.9"
http-body-util = "0.1"
memory = { path = "../memory" }
provider = { path = "../provider" }
runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect"] }
tokio-util = "0.7"
toml = "1.0"
tools = { path = "../tools" }
tracing = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
types = { path = "../types" }
