[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.32"
jsonschema = "0.42.1"
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tools = { path = "../tools" }
tracing = "0.1"
types = { path = "../types" }

[dev-dependencies]
async-trait = "0.1"
mockall = "0.14"
provider = { path = "../provider" }
tokio = { version = "1", features = ["full"] }
