[package]
name = "runtime"
version = "0.1.1"
edition = "2024"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
futures = "0.3.32"
jsonschema = "0.42.1"
memory_crate = { path = "../memory", package = "memory" }
regex = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tools = { path = "../tools" }
tracing = "0.1"
tiktoken-rs = "0.9"
types = { path = "../types" }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
mockall = "0.14"
provider = { path = "../provider" }
shell-daemon = { path = "../shell-daemon" }
tokio = { version = "1", features = ["full"] }
