[package]
name = "sandbox"
version = "0.1.0"
edition = "2024"

[features]
default = ["wasm-isolation"]
wasm-isolation = ["dep:wasmtime", "dep:wasmtime-wasi"]

[dependencies]
async-trait = "0.1"
bytes = "1"
futures-util = { version = "0.3", features = ["sink"] }
html2text = "0.16"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "query"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
types = { path = "../types" }
wasmtime = { version = "41", optional = true }
wasmtime-wasi = { version = "41", optional = true }

[dev-dependencies]
shell-daemon = { path = "../shell-daemon" }
