[package]
name = "shell-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
futures-util = { version = "0.3", features = ["sink"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
types = { path = "../types" }
