[package]
name = "shell-daemon"
version = "0.1.2"
edition = "2024"

[[bin]]
name = "shell-daemon"
path = "src/bin/shell-daemon.rs"

[dependencies]
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
futures-util = { version = "0.3", features = ["sink"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
types = { path = "../types" }
