[package]
name = "tools"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
sandbox = { path = "../sandbox" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "sync", "time"] }
tracing = "0.1"
types = { path = "../types" }

[dev-dependencies]
shell-daemon = { path = "../shell-daemon" }
tokio = { version = "1", features = ["full"] }
tools-macros = { path = "../tools-macros" }
