[package]
name = "tools"
version = "0.1.1"
edition = "2024"

[features]
default = ["wasm-isolation"]
wasm-isolation = ["dep:wasmtime", "dep:wasmtime-wasi"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
memory = { path = "../memory" }
bytes = "1"
futures-util = { version = "0.3", features = ["sink"] }
html2text = "0.16"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
types = { path = "../types" }
uuid = { version = "1", features = ["v4"] }
wasmtime = { version = "41", optional = true }
wasmtime-wasi = { version = "41", optional = true }

[dev-dependencies]
memory = { path = "../memory" }
shell-daemon = { path = "../shell-daemon" }
tokio = { version = "1", features = ["full"] }
tools-macros = { path = "../tools-macros" }
