[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
figment = { version = "0.10", features = ["env", "toml"] }
futures-util = "0.3"
memory = { path = "../memory" }
provider = { path = "../provider" }
runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["net", "rt", "sync"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect"] }
toml = "1.0"
tools = { path = "../tools" }
types = { path = "../types" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
