[package]
name = "types"
version = "0.1.1"
edition = "2024"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "std", "env-filter"] }
# CancellationToken used by delegation APIs
tokio-util = { version = "0.7", features = ["rt"] }
# small utility for storing global executor
once_cell = "1"

[dev-dependencies]
toml = "0.8"
